naming and allow failures

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,9 @@ before_script:
 - node_modules/.bin/newman --version
 
 jobs:
+    allow_failures:
     include:
-      - stage: test QA1
+      - stage: QA1 API smoke test
         script: node_modules/.bin/newman run tests/API_smoke_test.postman_collection.json -e tests/QA1.postman_environment.json --env-var "loginEmail=$QA1_USER_EMAIL" --env-var "loginPw=$QA1_USER_PASSWORD"
-      - stage: test QA2
+      - stage: QA2 API smoke test
         script: node_modules/.bin/newman run tests/API_smoke_test.postman_collection.json -e tests/QA2.postman_environment.json --env-var "loginEmail=$QA2_USER_EMAIL" --env-var "loginPw=$QA2_USER_PASSWORD"
