--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,21 @@
-
 language: node_js
 node_js:
-- "12.4.0"
+  - "12.4.0"
 
 install:
-- npm install newman
+  - npm install newman
 
 before_script:
-- node --version
-- npm --version
-- node_modules/.bin/newman --version
+  - node --version
+  - npm --version
+  - node_modules/.bin/newman --version
 
 jobs:
   include:
     - stage: "API smoke test"
       name: "QA1"
-      script: node_modules/.bin/newman run tests/API_smoke_test.postman_collection.json -e tests/QA1.postman_environment.json --env-var "loginEmail=$QA1_USER_EMAIL" --env-var "loginPw=$QA1_USER_PASSWORD" --env-var "marketoClientId=$MARKETO_CLIENT_ID" --env-var "marketoClientSecret=$MARKETO_CLIENT_SECRET" --env-var "clinicEmail=$QA1_CLINIC_EMAIL" --env-var "clinicPw=$QA1_CLINIC_PASSWORD" 
-    - script: node_modules/.bin/newman run tests/API_smoke_test.postman_collection.json -e tests/QA2.postman_environment.json --env-var "loginEmail=$QA2_USER_EMAIL" --env-var "loginPw=$QA2_USER_PASSWORD" --env-var "marketoClientId=$MARKETO_CLIENT_ID" --env-var "marketoClientSecret=$MARKETO_CLIENT_SECRET" --env-var "clinicEmail=$QA2_CLINIC_EMAIL" --env-var "clinicPw=$QA2_CLINIC_PASSWORD"
+      script: node_modules/.bin/newman run tests/API_contract_tests.postman_collection.json -e tests/QA1.postman_environment.json --env-var "loginEmail=$QA1_USER_EMAIL" --env-var "loginPw=$QA1_USER_PASSWORD" --env-var "marketoClientId=$MARKETO_CLIENT_ID" --env-var "marketoClientSecret=$MARKETO_CLIENT_SECRET" --env-var "clinicEmail=$QA1_CLINIC_EMAIL" --env-var "clinicPw=$QA1_CLINIC_PASSWORD"
+    - script: node_modules/.bin/newman run tests/API_contract_tests.postman_collection.json -e tests/QA2.postman_environment.json --env-var "loginEmail=$QA2_USER_EMAIL" --env-var "loginPw=$QA2_USER_PASSWORD" --env-var "marketoClientId=$MARKETO_CLIENT_ID" --env-var "marketoClientSecret=$MARKETO_CLIENT_SECRET" --env-var "clinicEmail=$QA2_CLINIC_EMAIL" --env-var "clinicPw=$QA2_CLINIC_PASSWORD"
       name: "QA2"
-    - script: node_modules/.bin/newman run tests/API_smoke_test.postman_collection.json -e tests/PRODUCTION.postman_environment.json --env-var "loginEmail=$PRODUCTION_USER_EMAIL" --env-var "loginPw=$PRODUCTION_USER_PASSWORD" --env-var "clinicEmail=$PRODUCTION_CLINIC_EMAIL" --env-var "clinicPw=$PRODUCTION_CLINIC_PASSWORD" --env-var "marketoClientId=$MARKETO_CLIENT_ID" --env-var "marketoClientSecret=$MARKETO_CLIENT_SECRET" --env-var "marketoEmailPw=$MARKETO_EMAIL_PASSWORD"
+    - script: node_modules/.bin/newman run tests/API_contract_tests.postman_collection.json -e tests/PRODUCTION.postman_environment.json --env-var "loginEmail=$PRODUCTION_USER_EMAIL" --env-var "loginPw=$PRODUCTION_USER_PASSWORD" --env-var "clinicEmail=$PRODUCTION_CLINIC_EMAIL" --env-var "clinicPw=$PRODUCTION_CLINIC_PASSWORD" --env-var "marketoClientId=$MARKETO_CLIENT_ID" --env-var "marketoClientSecret=$MARKETO_CLIENT_SECRET" --env-var "marketoEmailPw=$MARKETO_EMAIL_PASSWORD"
       name: "PRODUCTION"
