--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,6 @@ jobs:
       name: "QA2"
     - script: node_modules/.bin/newman run tests/API_contract_tests.postman_collection.json -e tests/PRODUCTION.postman_environment.json --env-var "loginEmail=$PRODUCTION_USER_EMAIL" --env-var "loginPw=$PRODUCTION_USER_PASSWORD" --env-var "clinicEmail=$PRODUCTION_CLINIC_EMAIL" --env-var "clinicPw=$PRODUCTION_CLINIC_PASSWORD" --env-var "marketoClientId=$MARKETO_CLIENT_ID" --env-var "marketoClientSecret=$MARKETO_CLIENT_SECRET" --env-var "marketoEmailPw=$MARKETO_EMAIL_PASSWORD"
       name: "PRODUCTION"
+      
+notifications:
+  slack: tidepoolteam:NjFoTXCpVN6Ju1CSJHDAuAgC
