updated variable to be used within the cli environment
also cleaned up some of the variable files formatting

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,18 +16,18 @@ jobs:
     - stage: "API smoke test"
     - name: "DEV1"
       if: type != api OR env(TEST_JOB) == "dev1"
-      script: node_modules/.bin/newman run tests/API_contract_tests.postman_collection.json -e tests/DEV1.postman_environment.json --env-var "loginEmail=$DEV1_USER_EMAIL" --env-var "loginPw=$DEV1_USER_PASSWORD" --env-var "clinicEmail=$DEV1_CLINIC_EMAIL" --env-var "clinicPw=$DEV1_CLINIC_PASSWORD"
+      script: node_modules/.bin/newman run tests/API_contract_tests.postman_collection.json -e tests/DEV1.postman_environment.json --env-var "loginEmail=$DEV1_USER_EMAIL" --env-var "loginPw=$DEV1_USER_PASSWORD" --env-var "clinicEmail=$DEV1_CLINIC_EMAIL" --env-var "clinicPw=$DEV1_CLINIC_PASSWORD" --env-var "sharingEmailAddress=$SHARING_EMAIL" --env-var "newClinicianEmailAddress=$NEW_CLINICIAN_EMAIL" --env-var "newUserEmailAddress=$NEW_USER_EMAIL" --env-var "newCustodialEmailAddress=$NEW_CUSTODIAL_EMAIL"
     - name: "QA1"
       if: type != api OR env(TEST_JOB) == "qa1"
-      script: node_modules/.bin/newman run tests/API_contract_tests.postman_collection.json -e tests/QA1.postman_environment.json --env-var "loginEmail=$QA1_USER_EMAIL" --env-var "loginPw=$QA1_USER_PASSWORD" --env-var "clinicEmail=$QA1_CLINIC_EMAIL" --env-var "clinicPw=$QA1_CLINIC_PASSWORD"
+      script: node_modules/.bin/newman run tests/API_contract_tests.postman_collection.json -e tests/QA1.postman_environment.json --env-var "loginEmail=$QA1_USER_EMAIL" --env-var "loginPw=$QA1_USER_PASSWORD" --env-var "clinicEmail=$QA1_CLINIC_EMAIL" --env-var "clinicPw=$QA1_CLINIC_PASSWORD" --env-var "sharingEmailAddress=$SHARING_EMAIL" --env-var "newClinicianEmailAddress=$NEW_CLINICIAN_EMAIL" --env-var "newUserEmailAddress=$NEW_USER_EMAIL" --env-var "newCustodialEmailAddress=$NEW_CUSTODIAL_EMAIL"
     - name: "QA2"
       if: type != api OR env(TEST_JOB) == "qa2"
-      script: node_modules/.bin/newman run tests/API_contract_tests.postman_collection.json -e tests/QA2.postman_environment.json --env-var "loginEmail=$QA2_USER_EMAIL" --env-var "loginPw=$QA2_USER_PASSWORD" --env-var "clinicEmail=$QA2_CLINIC_EMAIL" --env-var "clinicPw=$QA2_CLINIC_PASSWORD"
+      script: node_modules/.bin/newman run tests/API_contract_tests.postman_collection.json -e tests/QA2.postman_environment.json --env-var "loginEmail=$QA2_USER_EMAIL" --env-var "loginPw=$QA2_USER_PASSWORD" --env-var "clinicEmail=$QA2_CLINIC_EMAIL" --env-var "clinicPw=$QA2_CLINIC_PASSWORD" --env-var "sharingEmailAddress=$SHARING_EMAIL" --env-var "newClinicianEmailAddress=$NEW_CLINICIAN_EMAIL" --env-var "newUserEmailAddress=$NEW_USER_EMAIL" --env-var "newCustodialEmailAddress=$NEW_CUSTODIAL_EMAIL"
     - name: "INT"
-      script: node_modules/.bin/newman run tests/API_contract_tests.postman_collection.json -e tests/INT.postman_environment.json --env-var "loginEmail=$INT_USER_EMAIL" --env-var "loginPw=$INT_USER_PASSWORD" --env-var "clinicEmail=$INT_CLINIC_EMAIL" --env-var "clinicPw=$INT_CLINIC_PASSWORD"
+      script: node_modules/.bin/newman run tests/API_contract_tests.postman_collection.json -e tests/INT.postman_environment.json --env-var "loginEmail=$INT_USER_EMAIL" --env-var "loginPw=$INT_USER_PASSWORD" --env-var "clinicEmail=$INT_CLINIC_EMAIL" --env-var "clinicPw=$INT_CLINIC_PASSWORD" --env-var "sharingEmailAddress=$SHARING_EMAIL" --env-var "newClinicianEmailAddress=$NEW_CLINICIAN_EMAIL" --env-var "newUserEmailAddress=$NEW_USER_EMAIL" --env-var "newCustodialEmailAddress=$NEW_CUSTODIAL_EMAIL"
       if: type != api OR env(TEST_JOB) == "int"
     - name: "PRODUCTION"
-      script: node_modules/.bin/newman run tests/API_contract_tests.postman_collection.json -e tests/PRODUCTION.postman_environment.json --env-var "loginEmail=$PRODUCTION_USER_EMAIL" --env-var "loginPw=$PRODUCTION_USER_PASSWORD" --env-var "clinicEmail=$PRODUCTION_CLINIC_EMAIL" --env-var "clinicPw=$PRODUCTION_CLINIC_PASSWORD"
+      script: node_modules/.bin/newman run tests/API_contract_tests.postman_collection.json -e tests/PRODUCTION.postman_environment.json --env-var "loginEmail=$PRODUCTION_USER_EMAIL" --env-var "loginPw=$PRODUCTION_USER_PASSWORD" --env-var "clinicEmail=$PRODUCTION_CLINIC_EMAIL" --env-var "clinicPw=$PRODUCTION_CLINIC_PASSWORD" --env-var "sharingEmailAddress=$SHARING_EMAIL" --env-var "newClinicianEmailAddress=$NEW_CLINICIAN_EMAIL" --env-var "newUserEmailAddress=$NEW_USER_EMAIL" --env-var "newCustodialEmailAddress=$NEW_CUSTODIAL_EMAIL"
       if: type != api OR env(TEST_JOB) == "production"
 
 notifications:
