--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ node_js:
 install:
   - npm install newman
 
-script: echo "npm test temporarily disabled"
+script: echo "npm test disabled"
 
 before_script:
   - node --version
