change clinic to clinician and remove unused variables

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,18 +18,18 @@ jobs:
     - stage: "API smoke test"
     - name: "DEV1"
       if: type != api OR env(TEST_JOB) == "dev1"
-      script: node_modules/.bin/newman run tests/API_contract_tests.postman_collection.json -e tests/DEV1.postman_environment.json --env-var "loginEmail=$USER_EMAIL" --env-var "loginPw=$USER_PASSWORD" --env-var "clinicEmail=$CLINIC_EMAIL" --env-var "clinicPw=$CLINIC_PASSWORD" --env-var "sharingEmailAddress=$SHARING_EMAIL" --env-var "newClinicianEmailAddress=$NEW_CLINICIAN_EMAIL" --env-var "newUserEmailAddress=$NEW_USER_EMAIL" --env-var "newCustodialEmailAddress=$NEW_CUSTODIAL_EMAIL"
+      script: node_modules/.bin/newman run tests/API_contract_tests.postman_collection.json -e tests/DEV1.postman_environment.json --env-var "loginEmail=$USER_EMAIL" --env-var "loginPw=$USER_PASSWORD" --env-var "clinicianEmail=$CLINIC_EMAIL" --env-var "clinicianPw=$CLINIC_PASSWORD"
     - name: "QA1"
       if: type != api OR env(TEST_JOB) == "qa1"
-      script: node_modules/.bin/newman run tests/API_contract_tests.postman_collection.json -e tests/QA1.postman_environment.json --env-var "loginEmail=$USER_EMAIL" --env-var "loginPw=$USER_PASSWORD" --env-var "clinicEmail=$CLINIC_EMAIL" --env-var "clinicPw=$CLINIC_PASSWORD" --env-var "sharingEmailAddress=$SHARING_EMAIL" --env-var "newClinicianEmailAddress=$NEW_CLINICIAN_EMAIL" --env-var "newUserEmailAddress=$NEW_USER_EMAIL" --env-var "newCustodialEmailAddress=$NEW_CUSTODIAL_EMAIL"
+      script: node_modules/.bin/newman run tests/API_contract_tests.postman_collection.json -e tests/QA1.postman_environment.json --env-var "loginEmail=$USER_EMAIL" --env-var "loginPw=$USER_PASSWORD" --env-var "clinicianEmail=$CLINIC_EMAIL" --env-var "clinicianPw=$CLINIC_PASSWORD"
     - name: "QA2"
       if: type != api OR env(TEST_JOB) == "qa2"
-      script: node_modules/.bin/newman run tests/API_contract_tests.postman_collection.json -e tests/QA2.postman_environment.json --env-var "loginEmail=$USER_EMAIL" --env-var "loginPw=$USER_PASSWORD" --env-var "clinicEmail=$CLINIC_EMAIL" --env-var "clinicPw=$CLINIC_PASSWORD" --env-var "sharingEmailAddress=$SHARING_EMAIL" --env-var "newClinicianEmailAddress=$NEW_CLINICIAN_EMAIL" --env-var "newUserEmailAddress=$NEW_USER_EMAIL" --env-var "newCustodialEmailAddress=$NEW_CUSTODIAL_EMAIL"
+      script: node_modules/.bin/newman run tests/API_contract_tests.postman_collection.json -e tests/QA2.postman_environment.json --env-var "loginEmail=$USER_EMAIL" --env-var "loginPw=$USER_PASSWORD" --env-var "clinicianEmail=$CLINIC_EMAIL" --env-var "clinicianPw=$CLINIC_PASSWORD" 
     - name: "INT"
-      script: node_modules/.bin/newman run tests/API_contract_tests.postman_collection.json -e tests/INT.postman_environment.json --env-var "loginEmail=$USER_EMAIL" --env-var "loginPw=$USER_PASSWORD" --env-var "clinicEmail=$CLINIC_EMAIL" --env-var "clinicPw=$CLINIC_PASSWORD" --env-var "sharingEmailAddress=$SHARING_EMAIL" --env-var "newClinicianEmailAddress=$NEW_CLINICIAN_EMAIL" --env-var "newUserEmailAddress=$NEW_USER_EMAIL" --env-var "newCustodialEmailAddress=$NEW_CUSTODIAL_EMAIL"
+      script: node_modules/.bin/newman run tests/API_contract_tests.postman_collection.json -e tests/INT.postman_environment.json --env-var "loginEmail=$USER_EMAIL" --env-var "loginPw=$USER_PASSWORD" --env-var "clinicianEmail=$CLINIC_EMAIL" --env-var "clinicianPw=$CLINIC_PASSWORD" 
       if: type != api OR env(TEST_JOB) == "int"
     - name: "PRODUCTION"
-      script: node_modules/.bin/newman run tests/API_contract_tests.postman_collection.json -e tests/PRODUCTION.postman_environment.json --env-var "loginEmail=$USER_EMAIL" --env-var "loginPw=$USER_PASSWORD" --env-var "clinicEmail=$CLINIC_EMAIL" --env-var "clinicPw=$CLINIC_PASSWORD" --env-var "sharingEmailAddress=$SHARING_EMAIL" --env-var "newClinicianEmailAddress=$NEW_CLINICIAN_EMAIL" --env-var "newUserEmailAddress=$NEW_USER_EMAIL" --env-var "newCustodialEmailAddress=$NEW_CUSTODIAL_EMAIL"
+      script: node_modules/.bin/newman run tests/API_contract_tests.postman_collection.json -e tests/PRODUCTION.postman_environment.json --env-var "loginEmail=$USER_EMAIL" --env-var "loginPw=$USER_PASSWORD" --env-var "clinicianEmail=$CLINIC_EMAIL" --env-var "clinicianPw=$CLINIC_PASSWORD" 
       if: type != api OR env(TEST_JOB) == "production"
 
 notifications:
