Fix lots of things

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,15 +18,15 @@ jobs:
     - stage: "API smoke test"
     - name: "DEV1"
       if: type != api OR env(TEST_JOB) == "dev1"
-      script: node_modules/.bin/newman run tests/API_contract_tests.postman_collection.json -e tests/DEV1.postman_environment.json --env-var "loginEmail=$USER_EMAIL" --env-var "loginPw=$USER_PASSWORD" --env-var "clinicianEmail=$CLINIC_EMAIL" --env-var "clinicianPw=$CLINIC_PASSWORD"
+      script: node_modules/.bin/newman run tests/API_contract_tests.postman_collection.json -e tests/DEV1.postman_environment.json --env-var "loginEmail=$USER_EMAIL" --env-var "loginPw=$USER_PASSWORD" --env-var "clinicianEmail=$CLINIC_EMAIL" --env-var "clinicianPw=$CLINIC_PASSWORD" --env-var "defaultRoles=$DEFAULT_ROLES_DEV1" --env-var "skipEmailKey=$SKIP_EMAIL_KEY"
     - name: "QA1"
       if: type != api OR env(TEST_JOB) == "qa1"
-      script: node_modules/.bin/newman run tests/API_contract_tests.postman_collection.json -e tests/QA1.postman_environment.json --env-var "loginEmail=$USER_EMAIL" --env-var "loginPw=$USER_PASSWORD" --env-var "clinicianEmail=$CLINIC_EMAIL" --env-var "clinicianPw=$CLINIC_PASSWORD"
+      script: node_modules/.bin/newman run tests/API_contract_tests.postman_collection.json -e tests/QA1.postman_environment.json --env-var "loginEmail=$USER_EMAIL" --env-var "loginPw=$USER_PASSWORD" --env-var "clinicianEmail=$CLINIC_EMAIL" --env-var "clinicianPw=$CLINIC_PASSWORD" --env-var "defaultRoles=$DEFAULT_ROLES_QA1" --env-var "skipEmailKey=$SKIP_EMAIL_KEY"
     - name: "QA2"
       if: type != api OR env(TEST_JOB) == "qa2"
-      script: node_modules/.bin/newman run tests/API_contract_tests.postman_collection.json -e tests/QA2.postman_environment.json --env-var "loginEmail=$USER_EMAIL" --env-var "loginPw=$USER_PASSWORD" --env-var "clinicianEmail=$CLINIC_EMAIL" --env-var "clinicianPw=$CLINIC_PASSWORD" 
+      script: node_modules/.bin/newman run tests/API_contract_tests.postman_collection.json -e tests/QA2.postman_environment.json --env-var "loginEmail=$USER_EMAIL" --env-var "loginPw=$USER_PASSWORD" --env-var "clinicianEmail=$CLINIC_EMAIL" --env-var "clinicianPw=$CLINIC_PASSWORD" --env-var "defaultRoles=$DEFAULT_ROLES_QA2" --env-var "skipEmailKey=$SKIP_EMAIL_KEY"
     - name: "INT"
-      script: node_modules/.bin/newman run tests/API_contract_tests.postman_collection.json -e tests/INT.postman_environment.json --env-var "loginEmail=$USER_EMAIL" --env-var "loginPw=$USER_PASSWORD" --env-var "clinicianEmail=$CLINIC_EMAIL" --env-var "clinicianPw=$CLINIC_PASSWORD" 
+      script: node_modules/.bin/newman run tests/API_contract_tests.postman_collection.json -e tests/INT.postman_environment.json --env-var "loginEmail=$USER_EMAIL" --env-var "loginPw=$USER_PASSWORD" --env-var "clinicianEmail=$CLINIC_EMAIL" --env-var "clinicianPw=$CLINIC_PASSWORD" --env-var "defaultRoles=$DEFAULT_ROLES_INT" --env-var "skipEmailKey=$SKIP_EMAIL_KEY"
       if: type != api OR env(TEST_JOB) == "int"
     - name: "PRODUCTION"
       script: node_modules/.bin/newman run tests/API_contract_tests.postman_collection.json -e tests/PRODUCTION.postman_environment.json --env-var "loginEmail=$USER_EMAIL" --env-var "loginPw=$USER_PASSWORD" --env-var "clinicianEmail=$CLINIC_EMAIL" --env-var "clinicianPw=$CLINIC_PASSWORD" 
